--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.coolweather.app.activity.WeatherActivity"></activity>
+        <activity android:name="com.coolweather.app.activity.SearchCountyActivity"></activity>
     </application>
 
 </manifest>
